# runtime-observer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.collector  README.md  docker-compose.homeserver.yml  docker-compose.yml  justfile  package.json  secrets.example.yml
.githooks/: pre-push
collector/: pyproject.toml
collector/runtime_observer_server/: __init__.py  agent.py  api.py  config.py  dashboard.py  db.py  ingest_queue.py  main.py  secrets.py  store.py
collector/tests/: test_collector.py  test_ingest_queue.py
deployments/: docker-compose.ec2.yml
deployments/aws-sqs/: main.tf  variables.tf
deployments/homeserver/: env.homeserver  info.yml
docs/: api.md  architecture.md  deployment.md  development.md  integration.md
docs/plans/: observability-dashboard-retention-plan.html  observability-dashboard-retention-plan.md
examples/python-fastapi-minimal/: README.md  app.py  pyproject.toml
examples/python-fastapi-minimal/app/: __init__.py  main.py
js-sdk/: index.js
js-sdk/browser/: index.js  performance.js
js-sdk/core/: exporter.js  index.js
js-sdk/node/: index.js
js-sdk/tests/: sdk.test.js
python-sdk/: justfile  pyproject.toml
python-sdk/runtime_observer/: __init__.py  auto.py  config.py  context.py  exporter.py  logs.py  metadata.py  redaction.py  schema.py
python-sdk/tests/: test_core.py  test_fastapi.py  test_instrumentation.py
schemas/: README.md  runtime_observer_schema.json
schemas/examples/: app_started.json  background_job_finished.json  (+17 more)
scripts/: deploy-homeserver.sh  deploy_ec2.sh  localstack-init-sqs.sh
(+7 files in other folders)
