[project]
name = "runtime-observer-server"
version = "0.1.0"
description = "Local Runtime Observer collector server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
runtime-observer-server = "runtime_observer_server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
