[project]
name = "runtime-observer-python-fastapi-minimal"
version = "0.1.0"
description = "Minimal FastAPI application for testing Runtime Observer SDK and collector integration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
runtime-observer = [
  "runtime-observer",
]

[tool.uvicorn]
factory = false
